Add Contact Us routes and template, and assorted template tweaks

--- a/templates/emailVerifyReminder.html
+++ b/templates/emailVerifyReminder.html
@@ -7,7 +7,7 @@ Please verify your email address
 {% block main %}
 <!--custom message goes here-->
 
-<div class="px-4 py-5 my-5">
+<div class="px-4 pt-4 pb-5 my-4">
     <div class="col-lg-6 mx-auto">
         <h1>We Need to Verify Your Email</h1>
         <p class="lead">To fully participate in the MySupport community, you'll need to verify the email address you provided when you registered.</p>
