--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@ Home
 {% endblock %}
 
 {% block main %}
-<div class="px-4 py-5 my-5">
+<div class="px-4 pt-4 pb-5 my-4">
     <div class="mx-auto mb-5">
         <h1>MySupport Home</h1>
     </div>
