--- a/templates/passwordReset2.html
+++ b/templates/passwordReset2.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}
-Email verification
+Password Reset Email Sent
 {% endblock %}
 
 {% block main %}
@@ -9,7 +9,7 @@ Email verification
 <div class="px-4 pt-4 pb-5 my-4">
     <div class="col-lg-6 mx-auto">
         <h1>Check Your Email</h1>
-        <p class="lead">To verify your email address, we've sent an email to  {{ session["email"] }} with a link you must follow. The link will expire in 2 hours.</p>
+        <p class="lead">To start your password reset, we've sent an email to  <strong>{{ email }}</strong> with a link you must follow. The link will expire in 2 hours.</p>
         <p class="lead">If you don't see this email in your inbox, please check your spam folder.</p>
         <p class="lead mb-4">Still can't find it? <a href="/contact">Contact us.</a></p>
     </div>
