--- a/templates/profileSequence3.html
+++ b/templates/profileSequence3.html
@@ -9,7 +9,7 @@ Profile Step 3 of 5
 {% endblock %}
 
 {% block main %}
-<div class="px-4 py-5 my-5">
+<div class="px-4 pt-4 pb-5 my-4">
     <div class="col-lg-9 mx-auto">
         <h1>Tell us about your challenges</h1>
         <div class="progress my-3">
