--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,7 +1,19 @@
-html, body {
+/* html, body {
     margin: 0;
     height: 100vh;
-}
+} */
+
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+  
+  #footer {
+    /* background-color: #efefef; */
+    flex: 0 0 50px;/*or just height:50px;*/
+    margin-top: auto;
+  }
 
 .btn-primary, .btn-primary:active, .btn-primary:visited {
     background-color: #527bdc !important;
