--- a/templates/400.html
+++ b/templates/400.html
@@ -9,7 +9,7 @@ Error
     <h1>We cannot complete your request</h1>
 </div>
 <div>
-    <p>If you need help, contact the administrator of this website.</p>
+    <p>If you need help, <a href="{{ url_for('.contact') }}">contact us</a>.</p>
     <p> <a href="{{ url_for('.index') }}">Go to home page.</a></p>
 </div>
 {% endblock %}
