--- a/templates/404.html
+++ b/templates/404.html
@@ -9,6 +9,7 @@ Error
     <h1>We cannot find the page you requested</h1>
 </div>
 <div>
+    <p>If you need help, <a href="{{ url_for('.contact') }}">contact us</a>.</p>
     <p><a href="{{ url_for('.index') }}">Go to home page.</a></p>
 </div>
 {% endblock %}
