--- a/templates/413.html
+++ b/templates/413.html
@@ -10,7 +10,7 @@ Error
 </div>
 <div>
     <p>The file or data you tried to send us exceeds our capacity limit.</p>
-    <p>If you need help, contact the administrator of this website.</p>
+    <p>If you need help, <a href="{{ url_for('.contact') }}">contact us</a>.</p>
     <p> <a href="{{ url_for('.index') }}">Go to home page.</a></p>
 </div>
 {% endblock %}
