--- a/templates/500.html
+++ b/templates/500.html
@@ -9,6 +9,8 @@ Error
     <h1>We cannot complete your request</h1>
 </div>
 <div>
-    <p>We value your feedback and we want to know about errors in our program. Please notify the administrator of this website. <a href="{{ url_for('.index') }}">Go to home page.</a></p>
+    <p>We value your feedback and we want to know about errors in our program.</p>
+    <p>If you need help, <a href="{{ url_for('.contact') }}">contact us</a>.</p>
+    <p><a href="{{ url_for('.index') }}">Go to home page.</a></p>
 </div>
 {% endblock %}
