--- a/templates/articleThread.html
+++ b/templates/articleThread.html
@@ -14,7 +14,7 @@
 {% endblock %}
 
 {% block main %}
-<div class="px-4 py-5 my-5">
+<div class="px-4 pt-4 pb-5 my-4">
     <div class="mx-auto mb-5">
         <h1>
         {% if editMode == "create" %}
