--- a/templates/discussionView.html
+++ b/templates/discussionView.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block main %}
-<div class="px-4 py-5 my-5">
+<div class="px-4 pt-4 pb-5 my-4">
     <div class="mx-auto mb-5">
         <div class="d-flex justify-content-center my-5">
             <a href="/discussions" class="btn btn-large btn-success mx-3"><i class="fas fa-caret-square-left"></i>&nbsp;See all discussions</a>
