--- a/templates/messagesView.html
+++ b/templates/messagesView.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block main %}
-<div class="px-4 py-5 my-5">
+<div class="px-4 pt-4 pb-5 my-4">
     <div class="col-lg-9 mx-auto mb-5">
         <h1>Your Messages</h1>
     </div>
