--- a/templates/people.html
+++ b/templates/people.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block main %}
-<div class="px-4 py-5 my-5">
+<div class="px-4 pt-4 pb-5 my-4">
     <h1>Find People</h1>
     <div class="row">
         <div class="col-lg-6">
