--- a/templates/person.html
+++ b/templates/person.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block main %}
-<div class="px-4 py-5 my-5">
+<div class="px-4 pt-4 pb-5 my-4">
     <div class="row">
         <div id="thumbnailDiv" class="col-md-3 mx-auto d-flex justify-content-center">
             <figure id = "thumbnailFigure">
