--- a/templates/profileSequence1.html
+++ b/templates/profileSequence1.html
@@ -6,7 +6,7 @@ Profile Step 1 of 5
 
 {% block main %}
 
-<div class="px-4 py-5 my-5">
+<div class="px-4 pt-4 pb-5 my-4">
     <div class="col-lg-6 mx-auto">
         <h1>Tell Us About Yourself</h1>
         <div class="progress my-3">
