--- a/templates/profileSequence2.html
+++ b/templates/profileSequence2.html
@@ -10,7 +10,7 @@ Profile Step 2 of 5
 {% endblock %}
 
 {% block main %}
-<div class="px-4 py-5 my-5">
+<div class="px-4 pt-4 pb-5 my-4">
     <a id="top"></a>
     <div class="col-lg-9 mx-auto">
         <h1>How should people know you?</h1>
