Remove reference to settins on Profile 5 template

--- a/templates/profileSequence5.html
+++ b/templates/profileSequence5.html
@@ -13,11 +13,7 @@ Profile Step 5 of 5
           <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
         <p>
-            Thanks for setting up your profile. If you ever want to change it, visit the <strong>{{ userDict["displayName"] }}</strong> menu at the top right of any page. There you can:
-            <ul>
-                <li>update your <a href="/profile">Profile</a>, or</li>
-                <li>adjust your <a href="/settings">Settings</a> for things like topics you want to follow, or to manage who can send you messages.</li>
-            </ul>
+            Thanks for setting up your profile. If you ever want to change it, visit the <strong>{{ userDict["displayName"] }}</strong> menu at the top right of any page.
         </p>
         <p>
             Now you might want to:
